--- a/CódigoFuente/BitacorasProduccion/Views/Puestos/Disable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Puestos/Disable.cshtml
@@ -12,7 +12,6 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
             </div>
         </div>
 
@@ -27,40 +26,47 @@
                     </div>
 
                     <!-- /.col -->
+                    <!-- /.col -->
                     <div class="col-md-8">
                         <div class="table-responsive">
-                            <h3>¿Realmente desea deshabilitar este registro?</h3>
-                            <table class="table">
-                                <tbody>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.descripcion)</th>
-                                        <td>@Html.DisplayFor(model => model.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>&Aacute;rea</th>
-                                        <td>@Html.DisplayFor(model => model.Area.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Planta</th>
-                                        <td>@Html.DisplayFor(model => model.Area.plantas.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th style="width:50%"> @Html.DisplayNameFor(model => model.activo)</th>
-                                        <td>
-                                            @if (Model.activo)
-                                            {
-                                                <span>Activo</span>
-                                            }
-                                            else
-                                            {
-                                                <span>Inactivo</span>
-                                            }
-                                        </td>
-                                    </tr>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.shared_services, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-1 col-sm-1">
+                                    @Html.EditorFor(m => m.shared_services, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                </div>
+                            </div><div class="item form-group">
+                                <label class="col-form-label col-md-3 col-sm-3 label-align"> Planta </label>
+                                <div class="col-md-9 col-sm-9">
+                                    @if (Model != null && Model.shared_services)
+                                    {
+                                        <input type="text" class="form-control" value="SHARED SERVICES" readonly/>
+                                    }
+                                    else
+                                    {
+                                        <input type="text" class="form-control" value="@Html.DisplayFor(model => model.Area.plantas.descripcion)" readonly />
+                                    }
+                                </div>
+                            </div>
 
-                                </tbody>
-                            </table>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.areaClave, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-9 col-sm-9">
+                                    <input type="text" class="form-control" value="@Html.DisplayFor(model => model.Area.descripcion)" readonly />
+                                </div>
+                            </div>
+
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-9 col-sm-9">
+                                    @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                                </div>
+                            </div>
                         </div>
+
+
+                    </div>
+                    <div class="col-md-12">
+                        <hr />
                     </div>
                     <div class="col-md-12">
                         <p class="float-md-left">
