--- a/CódigoFuente/BitacorasProduccion/Views/Puestos/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Puestos/Create.cshtml
@@ -12,45 +12,67 @@
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+    <!-- iCheck -->
+    <link href="@Url.Content("~/Content/vendors/iCheck/skins/square/green.css")" rel="stylesheet">
+    <style>
+        select[readonly] ~ .select2.select2-container .selection [role="combobox"] {
+            background: repeating-linear-gradient(45deg, #eeeeee, #eeeeee 10px, rgba(255, 255, 255, 0.66) 10px, rgba(255, 255, 255, 0.66) 20px) !important;
+            box-shadow: inset 0 0 0px 1px #77859133;
+        }
+    </style>
 }
 
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
             </div>
         </div>
 
         <div class="clearfix"></div>
 
         <div class="row">
-            <div class="col-md-12 col-sm-12  ">
+            <div class="col-md-7 col-sm-12">
                 <div class="x_panel">
                     <div class="x_title">
                         <h2>@ViewBag.Title</h2>
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <br />
                         @using (Html.BeginForm("Create", "Puestos", FormMethod.Post, new { @class = "form-horizontal form-label-left" }))
                         {
                             @Html.AntiForgeryToken()
-                            <h4>Datos del puesto</h4>
-                            <hr />
-                            @Html.ValidationSummary("", new { @class = "text-danger" })
 
+                            if (!Html.ViewData.ModelState.IsValid)
+                            {
+                                <div class="alert alert-danger" role="alert">
+                                    @Html.ValidationSummary("", "Advertencia:")
+                                </div>
+                            }
 
                             <div class="item form-group">
+                                @Html.LabelFor(model => model.shared_services, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-1 col-sm-1">
+                                    @Html.EditorFor(m => m.shared_services, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.shared_services, "", new { @class = "text-danger" })
+                                </div>
+                            </div><div class="item form-group">
                                 <label class="col-form-label col-md-3 col-sm-3 label-align"> Planta </label>
-                                <div class="col-md-6 col-sm-6 ">
-                                    @Html.DropDownList("plantaClave", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                <div class="col-md-9 col-sm-9">
+                                    @if (Model != null && Model.shared_services)
+                                    {
+                                        @Html.DropDownList("plantaClave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @readonly = "readonly" })
+                                    }
+                                    else
+                                    {
+                                        @Html.DropDownList("plantaClave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    }
                                 </div>
                             </div>
 
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.areaClave, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
+                                <div class="col-md-9 col-sm-9">
                                     @Html.DropDownList("areaClave", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @required = "required", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.areaClave, "", new { @class = "text-danger" })
                                 </div>
@@ -58,11 +80,12 @@
 
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
-                                    @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                                <div class="col-md-9 col-sm-9">
+                                    @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
                             <div class="ln_solid"></div>
                             <div class="item form-group">
                                 <div class="col-md-6 col-sm-6 offset-md-3">
@@ -79,6 +102,18 @@
                     </a>
                 </div>
             </div>
+            <div class="col-md-5 col-sm-12  ">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>Puestos actuales <span id="title-puesto" style="font-size:12px; font-weight:bold"></span></h2>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <ul id="puestosActuales">
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -86,8 +121,12 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render(Url.Content("~/Scripts/Forms/puestos.js"))
+    @Scripts.Render(Url.Content("~/Scripts/Forms/puestos.js?Date=" + DateTime.Now))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
+    <!-- iCheck -->
+    @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
+
+
 }
 
 
