--- a/CódigoFuente/BitacorasProduccion/Views/Puestos/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Puestos/Details.cshtml
@@ -2,7 +2,7 @@
 
 
 @{
-    ViewBag.Title = "Listado de Puestos";
+    ViewBag.Title = "Detalles del Puestos";
     ViewBag.PrimerNivel = "recursos_humanos";
     ViewBag.SegundoNivel = "puestos";
     ViewBag.ControllerName = "Puestos";
@@ -14,7 +14,6 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
             </div>
         </div>
 
@@ -27,42 +26,48 @@
                         <h2>@ViewBag.Title</h2>
                         <div class="clearfix"></div>
                     </div>
-
                     <!-- /.col -->
                     <div class="col-md-8">
                         <div class="table-responsive">
-                            <table class="table">
-                                <tbody>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.descripcion)</th>
-                                        <td>@Html.DisplayFor(model => model.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>&Aacute;rea</th>
-                                        <td>@Html.DisplayFor(model => model.Area.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Planta</th>
-                                        <td>@Html.DisplayFor(model => model.Area.plantas.descripcion)</td>
-                                    </tr>                                   
-                                    <tr>
-                                        <th style="width:50%"> @Html.DisplayNameFor(model => model.activo)</th>
-                                        <td>
-                                            @if (Model.activo)
-                                            {
-                                                <span>Activo</span>
-                                            }
-                                            else
-                                            {
-                                                <span>Inactivo</span>
-                                            }
-                                        </td>
-                                    </tr>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.shared_services, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-1 col-sm-1">
+                                    @Html.EditorFor(m => m.shared_services, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                </div>
+                            </div><div class="item form-group">
+                                <label class="col-form-label col-md-3 col-sm-3 label-align"> Planta </label>
+                                <div class="col-md-9 col-sm-9">
+                                    @if (Model != null && Model.shared_services)
+                                    {
+                                        <input type="text" class="form-control" value="SHARED SERVICES" readonly/>
+                                    }
+                                    else
+                                    {
+                                        <input type="text" class="form-control" value="@Html.DisplayFor(model => model.Area.plantas.descripcion)" readonly />
+                                    }
+                                </div>
+                            </div>
 
-                                </tbody>
-                            </table>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.areaClave, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-9 col-sm-9">
+                                    <input type="text" class="form-control" value="@Html.DisplayFor(model => model.Area.descripcion)" readonly />
+                                </div>
+                            </div>
+
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-9 col-sm-9">
+                                    @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                                </div>
+                            </div>
                         </div>
+
+                       
                     </div>
+                    <div class="col-md-12">
+                        <hr />
+                    </div> 
                     <div class="col-md-12">
                         <p class="float-md-right">
                             <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = Model.clave})" class="btn btn-success btm-sm" title="Editar">
