--- a/CódigoFuente/BitacorasProduccion/Views/Puestos/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Puestos/Index.cshtml
@@ -16,6 +16,21 @@
 
     <!-- SweetAlert2 -->
     <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
+
+    <style>
+        tfoot input {
+            width: 100%;
+            padding: 3px;
+            box-sizing: border-box;
+        }
+
+        .carga {
+            padding: 15px;
+            background-color: black;
+            opacity: .3;
+            color: red;
+        }
+    </style>
 }
 
 @*Para SweetAlert*@
@@ -29,7 +44,6 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
             </div>
         </div>
 
@@ -59,17 +73,20 @@
                                             Crear nuevo
                                         </a>
                                     </div>
-                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable_individual_searching" class="table table-striped table-bordered" cellspacing="0" style="width:100%">
                                         <thead>
                                             <tr>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.descripcion)
+                                                    Planta
                                                 </th>
                                                 <th>
                                                     &Aacute;rea
                                                 </th>
                                                 <th>
-                                                    Planta
+                                                    @Html.DisplayNameFor(model => model.Area.numero_centro_costo)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.descripcion)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
@@ -80,51 +97,81 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                            <tr>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
-                                                </td>
-                                                <td>
-                                                    @if (item.activo)
-                                                    {
-                                                        <span>Activo</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span>Inactivo</span>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-success btm-sm" title="Editar">
-                                                        <i class="fa-regular fa-pen-to-square"></i>
-                                                    </a>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-info btm-sm" title="Detalles">
-                                                        <i class="fa fa-info-circle"></i>
-                                                    </a>
-
-                                                    @if (!item.activo)
-                                                    {
-                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-warning" s title="Habilitar">
-                                                            <i class="fa fa-unlock"></i>
+                                                <tr>
+                                                    <td>
+                                                        @if (item.Area != null && item.Area.shared_services)
+                                                        {
+                                                            @("SHARED SERVICES")
+                                                        }
+                                                        else
+                                                        {
+                                                            @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
+                                                        }
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Area.numero_centro_costo)
+                                                    </td>
+                                                    <td style="font-weight:bold">
+                                                        @Html.DisplayFor(modelItem => item.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @if (item.activo)
+                                                        {
+                                                            <span>Activo</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span>Inactivo</span>
+                                                        }
+                                                    </td>
+                                                    <td>
+                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-success btm-sm" title="Editar">
+                                                            <i class="fa-regular fa-pen-to-square"></i>
                                                         </a>
-                                                    }
-                                                    else
-                                                    {
-                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-danger" title="Deshabilitar">
-                                                            <i class="fa fa-lock"></i>
+                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-info btm-sm" title="Detalles">
+                                                            <i class="fa fa-info-circle"></i>
                                                         </a>
-                                                    }
 
-                                                </td>
-                                            </tr>
+                                                        @if (!item.activo)
+                                                        {
+                                                            <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-warning" s title="Habilitar">
+                                                                <i class="fa fa-unlock"></i>
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-danger" title="Deshabilitar">
+                                                                <i class="fa fa-lock"></i>
+                                                            </a>
+                                                        }
+
+                                                    </td>
+                                                </tr>
                                             }
                                         </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <th>
+                                                    Planta
+                                                </th>
+                                                <th>
+                                                    &Aacute;rea
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.Area.numero_centro_costo)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.descripcion)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.activo)
+                                                </th>
+                                                <th></th>
+                                            </tr>
+                                        </tfoot>
                                     </table>
                                 </div>
                             </div>
@@ -144,9 +191,75 @@
     @Scripts.Render("~/bundles/dataTables_js")
 
     <script>
+        $(document).ready(function () {
+
+            // Setup - add a text input to each footer cell
+            $('#datatable_individual_searching tfoot th').each(function () {
+                var title = $(this).text();
+                $(this).html('<input type="text" placeholder="' + title.trim() + '"/>');
+            });
+
+            // DataTable
+            table = $('#datatable_individual_searching').DataTable({
+                buttons: [
+                    'copy', 'excel', 'pdf'
+                ],
+                initComplete: function () {
+                    //coloca los filtros al inicio de la tabla
+                    var r = $('#datatable_individual_searching tfoot tr');
+                    r.find('th').each(function () {
+                        $(this).css('padding', 8);
+                    });
+                    $('#datatable_individual_searching thead').append(r);
+                    $('#search_0').css('text-align', 'center');
+                    // Apply the search
+                    this.api()
+                        .columns()
+                        .every(function () {
+                            var that = this;
+
+                            $('input', this.footer()).on('keyup change clear', function () {
+                                if (that.search() !== this.value) {
+                                    that.search(this.value).draw();
+                                }
+                            });
+                        });
+                },
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+                },
+                //stateSave: true,
+
+            });
+
+            var state = table.state.loaded();
+            if (state) {
+
+                table.columns().eq(0).each(function (colIdx) {
+
+
+                    var colSearch = state.columns[colIdx].search;
+
+                    if (colSearch.search) {
+                        let indice = 0;
+
+                        //  $('input', $('.filters th')[colIdx]).val(colSearch.search);
+                        $('th > :input').each(function () {
+                            if (indice == colIdx)
+                                $(this).val(colSearch.search);
+                            indice++;
+                        });
+                    }
+                });
+                table.draw();
+            }
+        });
+
+        //variable global para la tabla
+        var table;
+
         //agranda el tamaño de la barra
         window.onload = function () {
-            document.getElementById('menu_toggle').click();
             document.getElementById('menu_toggle').click();
         }
     </script>
