--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Create.cshtml
@@ -8,6 +8,7 @@
 
     List<Portal_2_0.Models.empleados> TotalEmpleados = (List<Portal_2_0.Models.empleados>)ViewBag.TotalEmpleados;
     List<int> subordinadosSeleccionados = (List<int>)ViewBag.SubordinadosSeleccionados;
+
 }
 
 @section estilos
@@ -18,6 +19,18 @@
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/square/green.css")" rel="stylesheet">
     <link href="~/Content/vendors/multiselect_filter/bootstrap-duallistbox.css" rel="stylesheet" />
+
+    <style>
+        .profile-picture {
+            width: 350px;
+            height: 350px;
+        }
+
+        select[readonly] ~ .select2.select2-container .selection [role="combobox"] {
+            background: repeating-linear-gradient(45deg, #eeeeee, #eeeeee 10px, rgba(255, 255, 255, 0.66) 10px, rgba(255, 255, 255, 0.66) 20px) !important;
+            box-shadow: inset 0 0 0px 1px #77859133;
+        }
+    </style>
 }
 
 @*Valores enviados previamente*@
@@ -105,6 +118,11 @@
                                     @Html.EditorFor(model => model.nueva_fecha_nacimiento, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.nueva_fecha_nacimiento, "", new { @class = "text-danger" })
                                 </div>
+                                @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-2 col-sm-2">
+                                    @Html.EditorFor(model => model.ingresoFecha, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                                    @Html.ValidationMessageFor(model => model.ingresoFecha, "", new { @class = "text-danger" })
+                                </div>
                                 @Html.LabelFor(model => model.sexo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-2 col-sm-2">
                                     <div class="col-md-6 col-sm-6">
@@ -135,19 +153,25 @@
                                     @Html.DropDownList("id_jefe_directo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.id_jefe_directo, "", new { @class = "text-danger" })
                                 </div>
-                                @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
-                                <div class="col-md-2 col-sm-2">
-                                    @Html.EditorFor(model => model.ingresoFecha, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.ingresoFecha, "", new { @class = "text-danger" })
+                                @Html.LabelFor(model => model.shared_services, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-1 col-sm-1">
+                                    @Html.EditorFor(m => m.shared_services, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.shared_services, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.planta_clave, htmlAttributes: new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3">
-                                    @Html.DropDownList("planta_clave", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @if (Model != null && Model.shared_services)
+                                    {
+                                        @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @readonly = "readonly" })
+                                    }
+                                    else
+                                    {
+                                        @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    }
                                     @Html.ValidationMessageFor(model => model.planta_clave, "", new { @class = "text-danger" })
                                 </div>
-
                                 @Html.LabelFor(model => model.id_area, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3 ">
                                     @Html.DropDownList("id_area", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
@@ -235,41 +259,6 @@
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
     <script src="~/Content/vendors/multiselect_filter/jquery.bootstrap-duallistbox.js"></script>
-    <script>
 
-        $(document).ready(function () {
-            $('input').iCheck({
-                checkboxClass: 'icheckbox_square-green',
-                radioClass: 'iradio_square-green',
-                increaseArea: '20%' // optional
-            });
-
-            var demo1 = $('[name=subordinados]').bootstrapDualListbox({
-                nonSelectedListLabel: 'Todos los Empleados',
-                selectedListLabel: 'Empleados Seleccionados',
-                filterTextClear: 'Mostrar todo',
-                filterPlaceHolder: 'Nombre',
-                moveSelectedLabel: 'Mover Seleccionados',
-                moveAllLabel: 'Mover Todo',
-                removeSelectedLabel: 'Quitar Seleccionados',
-                removeAllLabel: 'Quitar Todos',
-                moveOnSelect: false,
-            });
-            //elimina botones del DualList
-            CustomizeDuallistbox('subordinados');
-
-        });
-
-        //elimina los botones del multiselect
-        function CustomizeDuallistbox(listboxID) {
-            var customSettings = $('#' + listboxID).bootstrapDualListbox('getContainer');
-            customSettings.find('.btn-group.buttons').remove();
-        }
-
-        window.onload = function () {
-            clicMenu(1);
-        }
-
-    </script>
 }
 
