--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
@@ -26,21 +26,13 @@
             width: 350px;
             height: 350px;
         }
-    </style>
-}
 
-@*Valores enviados previamente*@
-@if (@ViewBag.c_planta != null)
-{
-    <input type="hidden" value="@ViewBag.c_planta" id="c_planta" />
-}
-@if (@ViewBag.c_area != null)
-{
-    <input type="hidden" value="@ViewBag.c_area" id="c_area" />
-}
-@if (@ViewBag.c_puesto != null)
-{
-    <input type="hidden" value="@ViewBag.c_puesto" id="c_puesto" />
+        select[readonly] ~ .select2.select2-container .selection [role="combobox"] {
+            background: repeating-linear-gradient(45deg, #eeeeee, #eeeeee 10px, rgba(255, 255, 255, 0.66) 10px, rgba(255, 255, 255, 0.66) 20px) !important;
+            box-shadow: inset 0 0 0px 1px #77859133;
+        }
+    </style>
+
 }
 
 <div class="right_col" role="main">
@@ -127,6 +119,11 @@
                                     @Html.EditorFor(model => model.nueva_fecha_nacimiento, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.nueva_fecha_nacimiento, "", new { @class = "text-danger" })
                                 </div>
+                                @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                <div class="col-md-2 col-sm-2">
+                                    @Html.EditorFor(model => model.ingresoFecha, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                                    @Html.ValidationMessageFor(model => model.ingresoFecha, "", new { @class = "text-danger" })
+                                </div>
                                 @Html.LabelFor(model => model.sexo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-2 col-sm-2">
                                     <div class="col-md-6 col-sm-6">
@@ -157,16 +154,23 @@
                                     @Html.DropDownList("id_jefe_directo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                     @Html.ValidationMessageFor(model => model.id_jefe_directo, "", new { @class = "text-danger" })
                                 </div>
-                                @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
-                                <div class="col-md-2 col-sm-2">
-                                    @Html.EditorFor(model => model.ingresoFecha, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
-                                    @Html.ValidationMessageFor(model => model.ingresoFecha, "", new { @class = "text-danger" })
+                                @Html.LabelFor(model => model.shared_services, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-1 col-sm-1">
+                                    @Html.EditorFor(m => m.shared_services, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.shared_services, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.planta_clave, htmlAttributes: new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-3 col-sm-3">
-                                    @Html.DropDownList("planta_clave", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @if (Model != null && Model.shared_services)
+                                    {
+                                        @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @readonly = "readonly" })
+                                    }
+                                    else
+                                    {
+                                        @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    }
                                     @Html.ValidationMessageFor(model => model.planta_clave, "", new { @class = "text-danger" })
                                 </div>
 
@@ -297,70 +301,5 @@
     @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
     <script src="~/Content/vendors/multiselect_filter/jquery.bootstrap-duallistbox.js"></script>
-    <script>
 
-        $(document).ready(function () {
-            $('input').iCheck({
-                checkboxClass: 'icheckbox_square-green',
-                radioClass: 'iradio_square-green',
-                increaseArea: '20%' // optional
-            });
-
-            var demo1 = $('[name=subordinados]').bootstrapDualListbox({
-                nonSelectedListLabel: 'Todos los Empleados',
-                selectedListLabel: 'Empleados Seleccionados',
-                filterTextClear: 'Mostrar todo',
-                filterPlaceHolder: 'Nombre',
-                moveSelectedLabel: 'Mover Seleccionados',
-                moveAllLabel: 'Mover Todo',
-                removeSelectedLabel: 'Quitar Seleccionados',
-                removeAllLabel: 'Quitar Todos',
-                moveOnSelect: false,
-            });
-            //elimina botones del DualList
-            CustomizeDuallistbox('subordinados');
-
-            //maneja el envió el del formulario
-            $('form #btn-ok').click(function (e) {
-                let $form = $(this).closest('form');
-
-                const swalWithBootstrapButtons = Swal.mixin({
-                    customClass: {
-                        confirmButton: 'btn btn-success',
-                        cancelButton: 'btn btn-danger'
-                    },
-                    buttonsStyling: false,
-                })
-
-                swalWithBootstrapButtons.fire({
-                    title: '¿Desea Continuar?',
-                    html: "Se guardarán los cambios.",
-                    showCancelButton: true,
-                    confirmButtonText: 'Aceptar',
-                    cancelButtonText: 'Cancelar'
-                }).then((result) => {
-                    if (result.value) {
-                        //espera a que se cierre el modal para enviar el formulario
-                        setTimeout(function () {
-                            $form.submit();
-                        }, 900);
-                    }
-                });
-
-
-            });
-
-        });
-
-        //elimina los botones del multiselect
-        function CustomizeDuallistbox(listboxID) {
-            var customSettings = $('#' + listboxID).bootstrapDualListbox('getContainer');
-            customSettings.find('.btn-group.buttons').remove();
-        }
-
-        window.onload = function () {
-            clicMenu(1);
-        }
-
-    </script>
 }
