--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Enable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Enable.cshtml
@@ -9,14 +9,14 @@
 
 @section estilos
 {
-
+    <!-- iCheck -->
+    <link href="@Url.Content("~/Content/vendors/iCheck/skins/square/green.css")" rel="stylesheet">
     <style>
         .profile-picture {
             width: 300px;
             height: 300px;
         }
     </style>
-
 }
 
 <div class="right_col" role="main">
@@ -76,6 +76,10 @@
                             <div class="col-md-2 col-sm-2">
                                 <input type="text" class="form-control" value="@Html.DisplayFor(model => model.nueva_fecha_nacimiento)" readonly />
                             </div>
+                            @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                            <div class="col-md-2 col-sm-2">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.ingresoFecha)" readonly />
+                            </div>
                             @Html.LabelFor(model => model.sexo, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                             <div class="col-md-2 col-sm-2">
                                 <div class="col-md-6 col-sm-6">
@@ -105,9 +109,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados2.ConcatNombre)" readonly />
                             </div>
-                            @Html.LabelFor(model => model.ingresoFecha, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
-                            <div class="col-md-2 col-sm-2">
-                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.ingresoFecha)" readonly />
+                            @Html.LabelFor(model => model.shared_services, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                            <div class="col-md-1 col-sm-1">
+                                @Html.EditorFor(m => m.shared_services, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                @Html.ValidationMessageFor(model => model.shared_services, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="item form-group">
